2.12 - ?
	- !scr command for Multi::IRC
	- API: Added 'image' field to get vn
	- API: Slightly improved error messages
	- Re-added /g/debug (for moderators)
	- Improved search
	- Display friendly message in the VN edit scr tab when no release is known
	- Bugfix: only redirect VN search to VN page if page=1
	- Bugfix: remove duplicate votes when merging tags (fixes a 500)
	- Bugfix: Multi::Anime: don't crash when anidb returns an invalid or empty year

2.11 - 2010-02-06
	- Added Slovak to the language list
	- Centered the thumbnails on the screenshots viewer
	- Improved date selector
	- Made the release date a required field
	- Versioned the deleting and locking of database entries
	- Multi's announcements are colored in blue
	- Abstracted parsing skin config files into a SkinFile module
	- Automatically generate the skin credits on d7, by reading the skin files
	- Only tagmods can create top-level tags
	- Notification system for
	  - PMs
	  - Notifying users of a deletion of an entry they contributed to
	  - Notifying users of a deletion they have in their (wish)list
	  - Notifying users of an edit of an entry they contributed to
	  - Notifying users of site announcements
	- Removed the ?l10n= paremeter
	- Remove sessions that haven't been used for more than a month
	- Properly copy over search string on switching with the searchtabs
	- Converted language columns in SQL to an ENUM type
	- Differentiate between pt-PT and pt-BR
	- Added Dutch translation of the user interface

2.10 - 2010-01-10
	- VN score on tag pages use plain averages instead of bayesian rating
	- Display VN ratings on tag pages as well
	- Split browse functions from CommonHTML.pm into BrowseHTML.pm
	- Abstracted all ORDER BY clauses in the DB abstraction layer
	- Show language flags on release lists on the homepage
	- Allow hiding of NSFW cover even if NSFW warning is disabled
	- Removed /g/debug
	- Replaced recursive stored procedures with WITH .. SELECT queries