@@ -86,9 +86,11 @@ our %S = (%S,
     [ '1024x768',          '4:3' ],
     [ '1600x1200',         '4:3' ],
     [ '640x400',           'widescreen' ],
+    [ '1024x576',          'widescreen' ],
     [ '1024x600',          'widescreen' ],
     [ '1024x640',          'widescreen' ],
     [ '1280x720 (720p)',   'widescreen' ],
+    [ '1280x800',          'widescreen' ],
     [ '1920x1080 (1080p)', 'widescreen' ],
   ],
   voiced          => [ 0..4 ],
